1.xx (2014-11-09)
-----------------
* --ignore-host fixes (Immo Goltz)

1.14g3 (2008-05-26)
-----------------
* modified for work with old and new postgrey versions

1.14g2 (2008-05-12)
-----------------
* modified for work with new postgrey versions

1.14g (2008-01-03)
-----------------
* add support for Greylist (Alexander Bech)

1.15 (UNRELEASED)
-----------------
* sendmail fixes (David Caldwell)

1.14 (2007-08-29)
-----------------
* add external css file: mailgraph.css (Patrick Nagel)
  -> you will need to add this file to where mailgraph.cgi is
* add support for exim (Nicola Worthington)
* add support for SpamAssassin milter (Todd A. Green)
* update support for amavis-milter (Joachim de Groot)
* update support for amavisd-new (Pawel Madej)
* update support for spamproxyd (Thomas Vander Stichele)
* --ignore-host can now be specified multiple times

1.13 (2007-03-28)
-----------------
* New mailgraph homepage URL: http://mailgraph.schweikert.ch
* XHTML 1.0 strict output (Yllar Pajus)
* add releative jump points (Hugo van der Kooij)
* add commented-out code for clamassassin (Adrian von Bidder)
* add support for Amavisd-new >= 2.4 (Christoph Kessinger)
* add support for Borderware Mxtreme (Postfix variant, Johan Nilsson)
* add support for the ClamAV SpamAssassin plugin (Thomas Brown)
* add support for MxTreme mail gateway (Guido)
* update support for Kaspersky AntiVirus (Igor Moskovko)
* update support for AntiVir (Wolfram Schlich)
* update support for drweb (Lev)
* update support for MailScanner (Simon Hartl, Pierre-Yves Bonnetain)
* update support for AntiVir (Frank Urban)
* fix DST-switch timewarp in autumn (Parse::Syslog 1.09)
* fix hidden rejected line behind area items (Axel Beckert)
* fix virbl DNS name (Eddy Beliveau)

1.12 (2005-10-16)
-----------------
* sendmail fixes (Ben Lentz, R. Scott Baer)
* compatibility with rrdtool 1.2.0 and 1.2.1 (no --slope-mode)
* compatibility with SpamAssassin 3.1.0 (Matias Lopez Bergero)