@@ -1,5 +1,10 @@
 1.xx (2014-11-09)
 -----------------
+* applied postgrey patches from http://www.bakarasse.de/pages/en/linux/mailgraph.php?lang=EN aka mailgraph-1.14g3
+* applied dane-patch from Sebastian van de Meer <kernel-error@kernel-error.de>, https://www.kernel-error.de/postfix/mailgraph-aufgebohrt-2
+
+1.xx (2014-11-09)
+-----------------
 * --ignore-host fixes (Immo Goltz)
 
 1.14g3 (2008-05-26)
